feat: add ffm example & fix jni run script for mac